[fix] fixed blog scrollbar width

--- a/styles/global.css
+++ b/styles/global.css
@@ -4,6 +4,7 @@
 
 html {
   min-width: 360px;
+  overflow-y: scroll;
 }
 
 * {
